# comfyui-docker

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda.experimental  LICENSE  README.md  boot.py  docker-compose.yml  example.env  extra_model_paths.yaml.example  latest-cuda.Dockerfile  nightly-cuda.Dockerfile  pyproject.toml
.github/workflows/: build-publish.yml  dockerhub-description.yml  update-dockerhub-desc.yml
comfyui-docker-helper/: boot.py  constants.py  models.py  nodes.py  requirements.txt  utils.py
comfyui_helper/: boot.py  config.py  constants.py  download.py  models.py  nodes.py  pyproject.toml  utils.py
config/: example.toml
docker/: compose.example.yml  example.env
docker/build-tools/: resolve-versions.sh
docker/config/: example.toml
src/comfyui_helper/: constants.py  models.py  nodes.py
